--- a/csssheet.css
+++ b/csssheet.css
@@ -1,6 +1,6 @@
 /* some styles is include internal stylesheet */
 *{ margin: 0%; padding: 0%; box-sizing: border-box; font-family: 'Times New Roman', Times, serif;}
-body{ background-color:rgb(148, 219, 139); }
+body{ background-color: white; }
 form{ text-align: center; background: lightgreen; font-family: 'Times New Roman', Times, serif; font-size: xx-large; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: black;}
 form > fieldset > a{float:right; font-size: 50%; text-decoration: none;}
 form > fieldset > a:hover{float:right; font-size: 50%; text-decoration: underline;}
